--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta name="color-scheme" content="light" />
-  <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <link href="favicon.png" rel="icon" type="image/png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
